tests/test_assets/semantic/valid/declarations/explicit_and_inferred.cog
explicit: i32 = 1;
inferred := 2;

test::() -> void {
    local_explicit: i64 = 3;
    local_inferred := 4;
}