tests/test_assets/semantic/invalid/raw_pointers/dereference_non_pointer.cog
test::() -> void {
    value: i32 = 1;
    *value = 2;
}
